--- a/Cart_0110222148_soultan_amirul_mukminin.html
+++ b/Cart_0110222148_soultan_amirul_mukminin.html
@@ -153,14 +153,14 @@ nav ul li a {
             </ul>
             <div class="Cart-Content1" style="display: flex; margin-top: 50px">
               <img
-                src="product-9.jpg"
+                src="product-1.jpg"
                 alt=""
                 style="width: 10%"
                 class="Cart-Content-Item1"
                 style="padding-right: 20px"
               />
-              <p class="Cart-Content-Item2" style="padding-top: 20px">
-                Watch Rolex
+              <p class="Cart-Content-Item2" style="padding-top: 20px; padding-left:10px;">
+                T-shirt size:Small
               </p>
               <p
                 class="Cart-Content-Item3"
