--- a/FormPemesananBarang.html
+++ b/FormPemesananBarang.html
@@ -94,7 +94,7 @@ Condition: Mint</textarea></td>
                 </tr>
         </form>
     </main>
-   <script type="text/javascript">
+<!--    <script type="text/javascript">
             var loadFile = function(event) {
                 var output = document.getElementById('output');
                 output.src = URL.createObjectURL(event.target.files[0]);
@@ -142,6 +142,6 @@ Condition: Mint</textarea></td>
                 return false;
             }
         }
-   </script>
+   </script> -->
 </body>
 </html>
