--- a/Praktikum9/Soal4.html
+++ b/Praktikum9/Soal4.html
@@ -15,7 +15,7 @@
     <p>+</p>
     <input type="number" name="" onchange="Hitung(this.value)">
     <p>=</p>
-    <span id="Hasil"></span>
+    <textarea name=""  cols="20" rows="1" id="Hasil" ></textarea>
     <script>
         function Hitung(angka){
             angka2 = parseInt(angka)
